--- a/src/main/Calculator.css
+++ b/src/main/Calculator.css
@@ -1,7 +1,10 @@
 .calculator {
     height: 320px;
     width: 235px;
-    background-color: red;
     border-radius: 5px;
     overflow: hidden;
+
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 48px);
 }
